--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     </div>
     <hr class="my-[116px] mx-[150px] border-gray-200">
     <div class="lg:flex lg:px-[62px] lg:pt-20 lg:mb-50 px-6 pb-20 container mx-auto">
-        <div class="lg:ml-20 lg:mr-15 lg:w-[620px] md:mx-15">
+        <div class=" lg:w-[620px] md:mx-15">
             <img src="/img/group-img-with-border.svg" alt="">
         </div>
         <div class="lg:w-[512px] mt-10 lg:mt-20">
@@ -497,8 +497,8 @@
             <h1 class="lg:text-4xl font-bold mb-3 lg:text-center text-[25px]">Das sagen unsere Kunden</h1>
             <p class="lg:text-center">Unternehmen wie Ihres vertrauen bereits auf Hostprofis</p>
         </div>
-        <div class="lg:flex sm:mx-6 lg:mx-8 mx-6">
-            <div class="">
+        <div class="lg:flex gap-5 mx-6">
+            <div class="mt-5">
                 <div class="border-1 border-yellow-500 w-full lg:w-100 rounded-lg p-5 bg-[#FAF7EB] lg:mb-10 mb-5">
                     <p class="lg:w-75">"Früher hatten unsere Kunden nur unsere privaten Handynummern. Jetzt erreichen
                         sie eine professionelle automatische Zentrale, die sie direkt zum richtigen Ansprechpartner
@@ -578,7 +578,7 @@
                     </div>
                 </div>
             </div>
-            <div class="lg:ml-10">
+            <div class="">
                 <div class="border-1 border-yellow-500 lg:w-100 rounded-lg p-5 bg-[#FAF7EB]  md:w-full mt-5">
                     <p class="w-80 md:w-full">"Wir haben jährlich €3.000 nur für Wartung bezahlt. Mit Hostprofis konnten
                         wir unsere Telefonkosten um 55 % senken und alles funktioniert reibungslos!"</p>
@@ -656,7 +656,7 @@
                     </div>
                 </div>
             </div>
-            <div class="lg:ml-10 lg:pb-10 md:w-full">
+            <div class=" lg:pb-10 md:w-full">
                 <div class="border-1 border-yellow-500 lg:w-100 rounded-lg  p-5 bg-[#FAF7EB] md:w-full mt-5">
                     <p class="w-78 md:w-full">“Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis
                         hat unser neues System in nur 14 Tagen eingerichtet, Keine Ausfallzeit, kein Stress!”</p>
@@ -737,7 +737,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-[#FAF7EB] lg:flex px-6 container mx-auto">
+    <div class="bg-[#FAF7EB] lg:flex  container mx-auto">
         <div class="ml-10 pt-10">
             <h2 class="text-4xl font-bold lg:w-90">Häufig gestellte Fragen</h2>
             <p class="lg:w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
@@ -837,7 +837,7 @@
         </div>
     </div>
     <div class="lg:flex px-6 bg container mx-auto">
-        <div class="lg:ml-[71px] lg:mt-[120px] mt-[56px]">
+        <div class=" lg:mt-[120px] mt-[56px]">
             <h1 class="lg:text-5xl font-bold lg:mr-[500px] text-3xl lg:w-[723px]">Starten Sie jetzt mit moderner
                 Cloud-Telefonie</h1>
             <p class="mt-6 lg:w-140">Vereinbaren Sie ein kurzes Gespräch mit unserem Team und erleben Sie, wie viel
@@ -856,9 +856,9 @@
             </div>
             <div>
                 <button
-                    class=" mt-[49px] w-full lg:w-[361px] lg:px-13 py-4 bg-yellow-500 border-1 border-yellow-100 rounded-full text-center font-bold text-white">Jetzt
+                    class=" mt-[49px] lg:w-[361px] py-4 bg-yellow-500 border-1 border-yellow-100 rounded-full text-center font-bold text-white">Jetzt
                     Kostenlos Beraten Lassen</button>
-                <div class="flex mt-5 pb-[86px] ml-5 w-full">
+                <div class="flex mt-5 pb-[86px] ">
                     <img src="./img/five-stars.svg" alt="">
                     <p>Über <strong>40.000</strong> zufriedene Kunden</p>
                 </div>
