--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="lg:flex pb-20 mt-4">
             <div class="lg:flex gap-10 lg:ml-20 mx-6">
                 <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white items-center">
-                    <div class="flex lg:pt-10 lg:ml-15 ml-5">
+                    <div class="flex lg:pt-10 lg:ml-15 ml-5 mt-10">
                         <img src="/img/cloud-tag.png" alt="">
                         <h2 class="lg:text-4xl font-bold text-yellow-600 lg:ml-5 mt-4 text-2xl">
                             Cloud Telefonie Pakete</h2>
@@ -479,7 +479,7 @@
                 </div>
             </div>
         </div>
-        <div class="lg:ml-110">
+        <div class="lg:ml-110 ml-8">
             <div>
                 <button class=" w-90 bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200 mt-5">Jetzt
                     Kostenlos Beraten Lassen</button>
@@ -742,7 +742,7 @@
             <h2 class="text-4xl font-bold lg:w-90">Häufig gestellte Fragen</h2>
             <p class="lg:w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
         </div>
-        <div class="pb-10">
+        <div class="pb-10 mx-6">
             <div class="border-1 border-yellow-500 rounded-lg lg:p-10 p-6 lg:ml-30 mt-10 lg:mr-10">
                 <h1 class="text-2xl font-bold">Was ist die Cloud-Telefonie von Hostprofis?</h1>
                 <p class="lg:w-165 mt-2">Eine komplette Telefonanlage für Unternehmen, die über das Internet
