--- a/index.html
+++ b/index.html
@@ -23,7 +23,42 @@
             <li class="w-full lg:block hidden"><a href="#" class="hover:text-gray-400 flex ">
                     <img src="/img/user-img.png" alt="" class="">40.000+ KUNDEN</a></li>
     </nav>
-    <nav class=" border-gray-200 bg-[#FAF4EB]">
+    <nav class="bg-white border-gray-200 dark:bg-[#FAF4EB]">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="./img/logo.png" class="h-8" alt="Logo" />
+    </a>
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+    <div class="hidden w-full lg:block lg:w-auto " id="navbar-default">
+      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-[#FAF4EB] lg:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0   dark:border-gray-700 justify-center lg:gap-17 lg:ml-20">
+        <li>
+          <a href="#" class="block py-2 px-3 text-black-700  rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-black md:dark:text-black lg:mt-5" aria-current="page">FUNKTIONEN</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-black md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent lg:mt-5">PREISE</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-black md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent lg:mt-5">REVIEWS</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-black md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent lg:mt-5">VERGLEICH</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-black md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent lg:mt-5">FAQ</a>
+        </li>
+        <button
+          class="p-2 mb-5 border-2 border-yellow-500 text-yellow-600 rounded-full hover:bg-gray-100 mt-3">Beratung Vereinbaren<i class="fa-solid fa-arrow-right ml-2"></i>
+        </button>
+      </ul>
+    </div>
+  </div>
+</nav>
+    <!-- <nav class=" border-gray-200 bg-[#FAF4EB]">
         <div class="max-w-screen-xl flex justify-between items-center  mx-auto p-4">
             <img src="/img/logo.png" class="h-8 w-50" alt=" Logo" />
             </a>
@@ -67,7 +102,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <hr class="border-yellow-500">
     <div class="container lg:flex justify-around lg:my-28 mx-auto p-5 ">
         <div class=" lg:pt-15">
@@ -329,7 +364,8 @@
         </div>
     </div>
     <div class="bg-[#FAF7EB] border-1 border-yellow-500 container mx-auto">
-        <h1 class="text-3xl font-bold  lg:ml-90 mt-30 mb-10 sm:mt-20">60% weniger Kosten bei 100x mehr Leistung</h1>
+       <div class="mx-6">
+         <h1 class="text-3xl font-bold  lg:ml-90 mt-30 mb-10 sm:mt-20">60% weniger Kosten bei 100x mehr Leistung</h1>
         <div class="flex lg:ml-60">
             <div>
                 <img src="/img/check-mark.svg" alt="" class="mr-3 lg:ml-10 ">
@@ -337,9 +373,9 @@
             <p>Genießen Sie volle Planungssicherheit durch eine <strong>All-inclusive-Pauschale</strong> ohne
                 Überraschungen.</p>
         </div>
-        <div class="flex lg:ml-60 mt-4">
+        <div class="flex lg:ml-60 mt-4 ">
             <div>
-                <img src="/img/check-mark.svg" alt="" class="mr-3 lg:ml-10">
+                <img src="/img/check-mark.svg" alt="" class="mr-4 lg:ml-10">
             </div>
             <p>Bis zu <strong>60% Kostenersparnis</strong> gegenüber konventionellen Telefonanlagen – bei deutlich mehr
                 Funktionsumfang.</p>
@@ -351,6 +387,7 @@
             <p><strong>Reduzieren Sie Ihre Mobilfunkkosten</strong> durch intelligente Cloud Telefonie auf allen
                 Geräten.</p>
         </div>
+       </div>
         <div class="lg:flex pb-20 mt-4">
             <div class="lg:flex gap-10 lg:ml-20 mx-6">
                 <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white items-center">
@@ -742,7 +779,7 @@
             <h2 class="text-4xl font-bold lg:w-90">Häufig gestellte Fragen</h2>
             <p class="lg:w-80 mt-3">Brauchen Sie mehr Informationen? Hier finden Sie die Antworten.</p>
         </div>
-        <div class="pb-10 mx-6">
+        <div class="pb-10 mx-6 lg:mx-0">
             <div class="border-1 border-yellow-500 rounded-lg lg:p-10 p-6 lg:ml-30 mt-10 lg:mr-10">
                 <h1 class="text-2xl font-bold">Was ist die Cloud-Telefonie von Hostprofis?</h1>
                 <p class="lg:w-165 mt-2">Eine komplette Telefonanlage für Unternehmen, die über das Internet
